--- a/Ansible-project/roles/nginx/tasks/main.yaml
+++ b/Ansible-project/roles/nginx/tasks/main.yaml
@@ -2,7 +2,7 @@
   apt:
     name: nginx
     state: latest
-    update_cache: true
+    update_cache: "yes"
 - name: "Start NGINX"
   service:
     name: nginx
