updated project. added k8s, added docker-compose install

--- a/Ansible-project/playbook.yaml
+++ b/Ansible-project/playbook.yaml
@@ -10,6 +10,11 @@
         - curl
         - gnupg-agent
         - software-properties-common
+        - python3-pip
+        - virtualenv
+        - python3-pip
+        - mysql-client
+        - jq
     - role: nginx
       vars: 
         install_directory: /opt/static-website-example
