--- a/Ansible-project/roles/docker/tasks/main.yaml
+++ b/Ansible-project/roles/docker/tasks/main.yaml
@@ -24,5 +24,10 @@
     name: ["docker-ce", "docker-ce-cli", "containerd.io"]
     state: latest
     update_cache: true
+- name: "Install docker-compose"
+  get_url:
+    url: https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
+    dest: /usr/local/bin/docker-compose
+    mode: "u+x,g+x"
 
     
