--- a/K8s-project/cl-ip-back.yaml
+++ b/K8s-project/cl-ip-back.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-app
+  name: cl-ip-back
   namespace: dev-ops-project
   labels:
-    app: flask-app #?
+    app: backend
 spec:
   selector:
-    app: flask-app
+    app: backend
   ports:
   - protocol: TCP
     port: 5000
