--- a/K8s-project/secret.yaml
+++ b/K8s-project/secret.yaml
@@ -1,3 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  name: secret-key
+type: Opaque
+stringData:
+  TEST_DATABASE_URI: ${TEST_DATABASE_URI}
+  SECRET_KEY: ${SECRET_KEY}
+  
